--- a/roles/controller_prerequisities/tasks/mysql.yml
+++ b/roles/controller_prerequisities/tasks/mysql.yml
@@ -37,4 +37,4 @@
   mysql_user: login_user=root login_password={{ root_dbpw }} user="root" password="{{ root_dbpw }}" host="{{ ansible_fqdn }}"
 
 - name: Removes the MySQL test database
-  mysql_db: db=test state=absent
+  mysql_db: login_user=root login_password={{ root_dbpw }} db=test state=absent
