--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -31,3 +31,49 @@ placement_pw: PLACEMENT_PASS
 neutron_dbpw: NEUTRON_DBPASS
 neutron_pw: NEUTRON_PASS
 metadata_secret: METADATA_SECRET
+
+external_network:
+  name: external
+  subnet_name: external-subnet
+  type: flat
+  physical_network: provider
+  subnet_range: 10.102.102.0/24
+  subnet_start: 10.102.102.220
+  subnet_end: 10.102.102.240
+  dns: 8.8.8.8
+  gateway: 10.102.102.1
+
+flavor:
+- name: m1.small
+  ram: 512
+  disk: 1
+  vcpus: 1
+- name: m1.medium
+  ram: 2048
+  disk: 20
+  vcpus: 2
+- name: m1.large
+  ram: 4096
+  disk: 20
+  vcpus: 2
+- name: m1.xlarge
+  ram: 4096
+  disk: 40
+  vcpus: 4
+
+private_network:
+- name: internal-0
+  subnet_name: internal-subnet-0
+  subnet_range: 192.168.0.0/24
+  dns: 8.8.8.8
+- name: internal-1
+  subnet_name: internal-subnet-1
+  subnet_range: 192.168.1.0/24
+  dns: 8.8.8.8
+
+security_group:
+  name: sg-standard
+  description: Standard Security Group
+
+router:
+  name: router
