--- a/roles/resource_openstack/tasks/main.yml
+++ b/roles/resource_openstack/tasks/main.yml
@@ -68,3 +68,11 @@
 - name: Add Interface
   shell: source /root/admin_rc && openstack router add subnet {{ router.name }} {{ item.subnet_name }}
   with_items: "{{ private_network }}"
+
+- name: copy ssh key ansible into openstack
+  copy:
+    src: /root/.ssh/id_rsa.pub
+    dest: /root/ansible_rsa.pub
+
+- name: create key openstack ansible
+  shell: source /root/admin_rc && openstack keypair create --public-key /root/ansible_rsa.pub ansible-ssh
