--- a/roles/neutron_compute/tasks/neutron.yml
+++ b/roles/neutron_compute/tasks/neutron.yml
@@ -64,6 +64,7 @@
     - /root/rpmbuild/RPMS/x86_64/openvswitch-devel-2.11.0-1.el7.x86_64.rpm
     - /root/rpmbuild/RPMS/x86_64/ovn-2.11.0-1.el7.x86_64.rpm
     - /root/rpmbuild/RPMS/x86_64/ovn-host-2.11.0-1.el7.x86_64.rpm
+    - /root/rpmbuild/RPMS/x86_64/ovn-common-2.11.0-1.el7.x86_64.rpm
 
 - name: install neutron packages
   yum: name="{{ packages }}" state=latest
