--- a/provisioning/roles/resource_openstack/tasks/main.yml
+++ b/provisioning/roles/resource_openstack/tasks/main.yml
@@ -76,3 +76,6 @@
 
 - name: create key openstack ansible
   shell: source /root/admin_rc && openstack keypair create --public-key /root/ansible_rsa.pub ansible-ssh
+
+- name: discover_hosts
+  shell: source /root/admin_rc && nova-manage cell_v2 discover_hosts --verbose
