--- a/ansible/iperf-benchmark/roles/client/tasks/main.yml
+++ b/ansible/iperf-benchmark/roles/client/tasks/main.yml
@@ -1,2 +1,2 @@
 - name: Run iperf3 client
-  shell: iperf3 -c {{ server_local_ip }} -O 5 -n 120 -V -J > /root/{{ os_type }}-{{ vm_type }}-output.json
+  shell: iperf3 -c {{ server_local_ip }} -O 5 -t 120 -V -J > /root/{{ os_type }}-{{ vm_type }}-output.json
