fix udp iperf3 problem & update to bionic

--- a/ansible/throughput-benchmark/roles/client/tasks/main.yml
+++ b/ansible/throughput-benchmark/roles/client/tasks/main.yml
@@ -1,2 +1,10 @@
+- name: Install .deb package from the internet.
+  apt:
+    deb: https://iperf.fr/download/ubuntu/libiperf0_3.7-3_amd64.deb
+
+- name: Install .deb package from the internet.
+  apt:
+    deb: https://iperf.fr/download/ubuntu/iperf3_3.7-3_amd64.deb
+
 - name: Run iperf3 client
   shell: iperf3 -c {{ server_local_ip }} -O 5 -t 120 -V -J > /root/throughput_{{ os_type }}-{{ vm_type }}-output.json
