first commit to upgrade to ussuri

--- a/ansible/openstack-install/group_vars/all.yaml
+++ b/ansible/openstack-install/group_vars/all.yaml
@@ -27,6 +27,7 @@ glance_dbpw: GLANCE_DBPASS
 glance_pw: GLANCE_PASS
 nova_dbpw: NOVA_DBPASS
 nova_pw: NOVA_PASS
+placement_dbpw: LACEMENT_DBPASS
 placement_pw: PLACEMENT_PASS
 neutron_dbpw: NEUTRON_DBPASS
 neutron_pw: NEUTRON_PASS
