--- a/ansible/openstack-install/roles/after_openstack/tasks/main.yml
+++ b/ansible/openstack-install/roles/after_openstack/tasks/main.yml
@@ -3,3 +3,6 @@
   shell: nova-manage cell_v2 discover_hosts --verbose
   become: yes
   become_user: nova
+
+- name: discover_hosts
+  shell: source /root/admin_rc && nova-manage cell_v2 discover_hosts --verbose
