--- a/ansible/throughput-benchmark/roles/result/tasks/main.yml
+++ b/ansible/throughput-benchmark/roles/result/tasks/main.yml
@@ -1,5 +1,17 @@
 - name: copy result
   fetch:
-    src: /root/throughput_{{ os_type }}-{{ vm_type }}-output.json
-    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-output.json
+    src: /root/throughput_{{ os_type }}-{{ vm_type }}-100m-output.json
+    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-100m-output.json
+    flat: yes
+
+- name: copy result
+  fetch:
+    src: /root/throughput_{{ os_type }}-{{ vm_type }}-50m-output.json
+    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-50m-output.json
+    flat: yes
+
+- name: copy result
+  fetch:
+    src: /root/throughput_{{ os_type }}-{{ vm_type }}-200m-output.json
+    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-200m-output.json
     flat: yes
