--- a/ansible/throughput-benchmark/roles/result/tasks/main.yml
+++ b/ansible/throughput-benchmark/roles/result/tasks/main.yml
@@ -1,17 +1,11 @@
 - name: copy result
   fetch:
-    src: /root/throughput_{{ os_type }}-{{ vm_type }}-100m-output.json
-    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-100m-output.json
+    src: /root/throughput_{{ os_type }}-{{ vm_type }}-output.json
+    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-output.json
     flat: yes
 
 - name: copy result
   fetch:
-    src: /root/throughput_{{ os_type }}-{{ vm_type }}-50m-output.json
-    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-50m-output.json
-    flat: yes
-
-- name: copy result
-  fetch:
-    src: /root/throughput_{{ os_type }}-{{ vm_type }}-200m-output.json
-    dest: /root/throughput_{{ os_type }}-{{ vm_type }}-200m-output.json
+    src: /root/throughput_udp_{{ os_type }}-{{ vm_type }}-output.json
+    dest: /root/throughput_udp_{{ os_type }}-{{ vm_type }}-output.json
     flat: yes
